--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,63 @@
-h3, p {
-    color: black;
+@font-face {
+    font-family: "Manrope";
+    src: url("/src/assets/fonts/Manrope-Regular.woff2") format("woff2");
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Manrope";
+    src: url("/src/assets/fonts/Manrope-Medium.woff2") format("woff2");
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Manrope";
+    src: url("/src/assets/fonts/Manrope-SemiBold.woff2") format("woff2");
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Manrope";
+    src: url("/src/assets/fonts/Manrope-Bold.woff2") format("woff2");
+    font-weight: 700;
+    font-style: normal;
+}
+
+:root {
+    --main: #101828;
+    --gray: #8d929a;
+    --gray-light: #dadde1;
+    --badges: #f2f4f7;
+    --inputs: #f7f7f7;
+    --white: #fff;
+    --button: #3470ff;
+    --button-hover: #0b44cd;
+    --font-family: "Manrope", sans-serif;
+    --second-family: "Inter", sans-serif; 
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 ul {
-    list-style: none;
+    margin: 0;
+    padding: 0;
+    list-style: none; 
+}
+
+a {
+    text-decoration: none;
+    cursor: pointer;
 }
