--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,19 @@ a {
     text-decoration: none;
     cursor: pointer;
 }
+
+p {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 125%;
+    color: var(--main);
+}
+
+h3 {
+    font-family: var(--font-family);
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 120%;
+    color: var(--main);
+}
