--- a/src/components/CatalogFilters/CatalogFilters.module.css
+++ b/src/components/CatalogFilters/CatalogFilters.module.css
@@ -106,7 +106,7 @@
 
     border: none;
     border-radius: 12px;
-    padding: 12px 51px;
+    padding: 12px;
     width: 156px;
     height: 44px;
 
